updated links again

--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 </head>
 <body>
-<a href="/Surveys/">Gift Box</a><br>
-<a href="/Surveys/">Particles</a><br>
-<a href="/Surveys/">Spinner</a>
+<a href="/Surveys/gift/index.html">Gift Box</a><br>
+<a href="/Surveys/particles/index.html">Particles</a><br>
+<a href="/Surveys/spinner/index.html">Spinner</a>
 </body>
 </html>
