--- a/index.html
+++ b/index.html
@@ -2,35 +2,46 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <title>Survey Options with Particles</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Survey Options</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Electrolize&family=Funnel+Display:wght@300..800&display=swap" rel="stylesheet">
     <style>
-        body {
+        html, body {
             margin: 0;
-            height: 100vh;
+            height: 100%;
+            overflow: hidden;
             background-color: #111;
+            font-family: "Funnel Display", sans-serif;
+        }
+
+        /* Particle canvas behind everything */
+        #particleCanvas {
+            position: fixed;
+            inset: 0;
+            z-index: 0;
         }
 
         .frosted-glass{
-            height:600px;
+            position: relative;
+            z-index: 1; /* ABOVE particles */
+            height: 600px;
             width: 800px;
-            background: radial-gradient(farthest-corner at 37% 0%, #d73f09ff 0%, #d7400952 40%, #ffffff00 58%), radial-gradient(farthest-corner at 53% 0%, #f7a162ff 0%, #f8a16399 10%, #ffffff00 48%), linear-gradient(to top, #ffffff10 100%, #ffffff10 100%);
+            background: radial-gradient(farthest-corner at 37% 0%, #d73f09ff 0%, #d7400952 40%, #ffffff00 58%), 
+                        radial-gradient(farthest-corner at 53% 0%, #f7a162ff 0%, #f8a16399 10%, #ffffff00 48%), 
+                        linear-gradient(to top, #ffffff10 100%, #ffffff10 100%);
             box-shadow: 0 4px 30px rgb(0, 0, 0);
             backdrop-filter: blur(10.9px);
             -webkit-backdrop-filter: blur(10.9px);
             margin:auto;
             margin-top:100px;
-            }
+        }
 
         .frosted-glass h1{
             color: #ffffff30;
             font-family: "Funnel Display", sans-serif;
-            font-optical-sizing: auto;
             font-weight: 900;
-            font-style: normal;
             font-size: 1.25rem;
             margin-bottom: 0;
             rotate: -90deg;
@@ -41,9 +52,7 @@
         .frosted-glass .welcome-text h2{
             color: white;
             font-family: "Funnel Display", sans-serif;
-            font-optical-sizing: auto;
             font-weight: 300;
-            font-style: normal;
             font-size: 3rem;
             margin-top: 0;
             border-left: 1px solid #fff;
@@ -98,21 +107,26 @@
             background-color: #d73f09;
             position: absolute;
             top: 325px;
-            left: 525px;
+            left: 526px;
             padding: 0.12rem;
             border-radius: 0 50px 50px 0;
             border: 1px solid rgba(255, 255, 255, 0.384);
             width: 50px;
             font-size: 1.5rem;
+            cursor: pointer;
         }
 
         .flex{
             display:flex;
         }
     </style>
-
 </head>
 <body>
+
+<!-- Particle background -->
+<canvas id="particleCanvas"></canvas>
+
+<!-- Foreground content -->
 <div class="frosted-glass">
     <div class="welcome-text flex">
         <h1>AGU 2025</h1>
@@ -122,10 +136,86 @@
         <h2>Enter & Spin</h2>
     </div>
     <div class="white-line"></div>
-    <form>
+    <form id="spinForm">
         <input type="text" name="Name" placeholder="What is your name?" class="input-text-box">
         <button type="submit" class="submit-btn">🡪</button>
     </form>
 </div>
+
+<script>
+const canvas = document.getElementById("particleCanvas");
+const ctx = canvas.getContext("2d");
+
+let particles = [];
+const BASE_PARTICLES = 5000;
+
+function resize() {
+    canvas.width = window.innerWidth;
+    canvas.height = window.innerHeight;
+}
+resize();
+window.addEventListener("resize", resize);
+
+function addBaseParticles() {
+    particles = [];
+    for (let i = 0; i < BASE_PARTICLES; i++) {
+        particles.push({
+            x: Math.random() * canvas.width,
+            y: Math.random() * canvas.height,
+            vx: (Math.random() - 0.5) * 0.5,
+            vy: (Math.random() - 0.5) * 0.5,
+            size: Math.random() * 2 + 1,
+            color: "rgba(255,255,255,0.5)" // soft white for dark bg
+        });
+    }
+}
+addBaseParticles();
+
+function explodeToParticles(x, y) {
+    for (let i = 0; i < 30; i++) {
+        particles.push({
+            x,
+            y,
+            vx: (Math.random() - 0.5) * 6,
+            vy: (Math.random() - 0.5) * 6,
+            size: Math.random() * 4 + 2,
+            color: "#d73f09"
+        });
+    }
+}
+
+function animate() {
+    ctx.clearRect(0, 0, canvas.width, canvas.height);
+
+    particles.forEach(p => {
+        p.x += p.vx;
+        p.y += p.vy;
+
+        // bounce off edges
+        if (p.x < 0 || p.x > canvas.width) p.vx *= -1;
+        if (p.y < 0 || p.y > canvas.height) p.vy *= -1;
+
+        ctx.fillStyle = p.color;
+        ctx.beginPath();
+        ctx.arc(p.x, p.y, p.size, 0, Math.PI * 2);
+        ctx.fill();
+    });
+
+    requestAnimationFrame(animate);
+}
+animate();
+
+const form = document.getElementById("spinForm");
+
+form.addEventListener("submit", (e) => {
+    e.preventDefault(); 
+    const rect = form.getBoundingClientRect();
+    const centerX = rect.left + rect.width / 2;
+    const centerY = rect.top + rect.height / 2;
+
+    // burst from form area
+    explodeToParticles(centerX, centerY);
+});
+</script>
 </body>
 </html>
