--- a/index.html
+++ b/index.html
@@ -224,6 +224,95 @@
             opacity: 0;
             transition: opacity 0.8s ease;
         }
+        
+        .modal-backdrop {
+            display: none;
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background: rgba(0, 0, 0, 0.8);
+            z-index: 1000;
+            justify-content: center;
+            align-items: center;
+        }
+
+        .modal-backdrop.active {
+            display: flex;
+            animation: fadeIn 0.3s;
+        }
+
+        @keyframes fadeIn {
+            from { opacity: 0; }
+            to { opacity: 1; }
+        }
+
+        .modal-content {
+            background: white;
+            padding: 50px;
+            border-radius: 20px;
+            text-align: center;
+            max-width: 450px;
+            animation: popIn 0.4s cubic-bezier(0.68, -0.55, 0.265, 1.55);
+        }
+
+        @keyframes popIn {
+            0% { transform: scale(0.5); opacity: 0; }
+            100% { transform: scale(1); opacity: 1; }
+        }
+
+        .prize-display {
+            font-size: 90px;
+            font-weight: 700;
+            color: #d73f09;
+            margin: 30px 0;
+            text-shadow: 3px 3px 6px rgba(0,0,0,0.1);
+            animation: bounce 0.6s;
+        }
+
+        @keyframes bounce {
+            0%, 100% { transform: translateY(0); }
+            50% { transform: translateY(-20px); }
+        }
+
+        .modal-buttons {
+            display: flex;
+            gap: 15px;
+            justify-content: center;
+        }
+
+        .modal-btn {
+            padding: 14px 35px;
+            border: none;
+            border-radius: 10px;
+            font-size: 16px;
+            font-weight: 600;
+            cursor: pointer;
+            transition: all 0.3s;
+        }
+
+        .modal-btn.primary {
+            background: #d73f09;
+            color: white;
+        }
+
+        .modal-btn.primary:hover {
+            background: white;
+            color:#000;
+            border: 1px solid #000;
+            transform: translateY(-2px);
+        }
+
+        .modal-btn.secondary {
+            background: #f0f0f0;
+            color: #333;
+        }
+
+        .modal-btn.secondary:hover {
+            background: #e0e0e0;
+            transform: translateY(-2px);
+        }
 
         .flex{
             display:flex;
@@ -253,6 +342,9 @@
 </form>
 
 </div>
+
+<!-- Spinner -->
+
 <div id="spinnerWheel" class="hide">
     <div class="wheel-wrapper">
         <div class="spin-button" id="spinBtn">SPIN</div>
@@ -269,6 +361,18 @@
     </div>
 </div>
 
+<!-- Prize Modal -->
+<div class="modal-backdrop" id="prizeModal">
+    <div class="modal-content">
+        <h2>Congratulations!</h2>
+        <div class="prize-display" id="prizeValue">100</div>
+        <p>You won <strong id="prizeLabel">100 points</strong>!</p>
+        <div class="modal-buttons">
+            <button class="modal-btn primary" id="spinAgain">Spin Again</button>
+            <button class="modal-btn secondary" id="closeModal">Close</button>
+        </div>
+    </div>
+</div>
 
 <script>
 const canvas = document.getElementById("particleCanvas");
@@ -457,11 +561,29 @@ spinBtn.addEventListener("click", () => {
         const segment = Math.floor(angle / 45);
         const prize = prizes[segment];
 
-        alert("You won: " + prize);
+        showPrizeModal(prize);
         isSpinning = false;
     }, 5000);
 });
 
+/* ------------------------------
+    MODAL FUNCTIONS
+------------------------------- */
+
+function showPrizeModal(prize) {
+    document.getElementById("prizeValue").textContent = prize;
+    document.getElementById("prizeLabel").textContent = `${prize} points`;
+
+    document.getElementById("prizeModal").classList.add("active");
+}
+
+document.getElementById("closeModal").addEventListener("click", () => {
+    document.getElementById("prizeModal").classList.remove("active");
+});
+
+document.getElementById("spinAgain").addEventListener("click", () => {
+    document.getElementById("prizeModal").classList.remove("active");
+});
 
 </script>
 </body>
