--- a/SurveyApp/wwwroot/index.html
+++ b/SurveyApp/wwwroot/index.html
@@ -211,10 +211,9 @@
         #spinnerWheel {
             opacity: 0;
             transition: opacity 0.8s ease;
-            position: absolute;
-            top: 205px;
-            left: 325px;
-            z-index: 3;
+            display: grid;
+            place-items: center;
+            height: 100%;
         }
 
         #spinnerWheel.show {
