Form style adjustments

--- a/SurveyApp/wwwroot/index.html
+++ b/SurveyApp/wwwroot/index.html
@@ -34,7 +34,7 @@
             backdrop-filter: blur(10.9px);
             -webkit-backdrop-filter: blur(10.9px);
             margin:auto;
-            margin-top:100px;
+            margin-top:175px;
         }
 
         .frosted-glass h1{
@@ -141,8 +141,8 @@
             justify-content: center;
             align-items: center;
             text-transform: uppercase;
-            font-weight: 700;
-            font-size: 14px;
+            font-weight: 800;
+            font-size: 2rem;
             color: #333;
             border: 5px solid #333;
             cursor: pointer;
